--- a/pages/en/about.mdx
+++ b/pages/en/about.mdx
@@ -2,13 +2,13 @@ import Image from 'next/image';
 
 # SimplifyTrip Open API
 
-Tài liệu hướng dẫn dành cho đối tác tích hợp hệ thống APIs của SimplifyTrip.
+Documentation for partners integrating with SimplifyTrip APIs.
 
 <div className="my-5">
 	<Image src="/logo-full.png" width={200} height={0} quality={100} alt="logo" className="inline" />
 </div>
 
-##### CÔNG TY TNHH ĐƠN GIẢN HOÁ CHUYẾN ĐI (SIMPLIFY TRIP)
+##### SIMPLIFY TRIP COMPANY LIMITED (SIMPLIFY TRIP)
 
-Giấy chứng nhận Đăng ký Kinh doanh số 0318490860
-do Sở Kế hoạch và Đầu tư TP.HCM cấp ngày 05/06/2024.
+Business Registration Certificate No. 0318490860,
+issued by the Ho Chi Minh City Department of Planning and Investment on June 5, 2024.
