--- a/pages/en/changelog.mdx
+++ b/pages/en/changelog.mdx
@@ -1,18 +1,18 @@
 ## What's New? 👋
-Cập cập nhật các thay đổi của hệ thống
+System change log
 
-##### Phiên bản 1.2.0 (14/05/2025)
-- ✅ Cung cấp nhóm APIs mới `/products/*` để phục vụ nhu cầu phân phối các sản phẩm mới của SimplifyTrip (ngoài eSim) trong tương lai.
-- ✅ Nâng cấp API `/order`, bây giờ bạn có thể order nhiều sản phẩm trong cùng một đơn hàng.
-- ✅ Loại bỏ nhóm APIs `/esims/*` chính thức xoá vào ngày **15/06/2025**.
-- ✅ Thay đổi webhook type khi đơn hàng được xử lý xong: `ORDER_ESIM_SUCCESS` => `PURCHASE_ORDER_SUCCESS` và `ORDER_ESIM_FAIL` => `PURCHASE_ORDER_FAIL`
+##### Version 1.2.0 (May 14, 2025)
+- ✅ Added new `/products/*` API group to support distribution of new SimplifyTrip products (beyond eSIM) in the future.
+- ✅ Upgraded `/order` API. You can now place multiple products in a single order.
+- ✅ Removed `/esims/*` API group, officially deleted on **June 15, 2025**.
+- ✅ Updated webhook types when order processing completes: `ORDER_ESIM_SUCCESS` => `PURCHASE_ORDER_SUCCESS` and `ORDER_ESIM_FAIL` => `PURCHASE_ORDER_FAIL`
 - ✅ Fix bugs
 
-##### Phiên bản 1.1.0 (07/12/2024)
-- ✅ Thêm Api tra cứu trạng thái eSim bằng iccid
+##### Version 1.1.0 (December 7, 2024)
+- ✅ Added API to check eSIM status by ICCID
 - ✅ Fix bugs
 
-##### Phiên bản 1.0.0 (26/11/2024)
-- 📢 Ra mắt phiên bản chính thức đầu tiên của SimplifyTrip Open API
-- ✅ Cấp tài khoản cho đối tác hợp tác với SimplifyTrip
-- ✅ Hỗ trợ một tài khoản tạo được nhiều tổ chức
+##### Version 1.0.0 (November 26, 2024)
+- 📢 First official release of SimplifyTrip Open API
+- ✅ Partner account provisioning
+- ✅ One account can create multiple institutions
