--- a/pages/en/create-institution.mdx
+++ b/pages/en/create-institution.mdx
@@ -2,8 +2,8 @@
 title: Create institution
 ---
 
-# Tạo tổ chức
+# Create institution
 
-Bạn không thể tự tạo tổ chức trong thời điểm này.
+You cannot self-create an institution at this time.
 
-Vui lòng liên hệ với đội ngũ hỗ trợ của SimplifyTrip để được tư vấn hoặc truy cập trang <a href="https://support.simplifytrip.com/hop-tac-cung-simplify-trip/#doi-tac" className="underline" target='_blank'>Trở thành đối tác của SimplifyTrip</a> gửi các thông tin cần thiết về tổ chức của bạn để chúng tôi có thể giúp bạn tạo tổ chức của mình.
+Please contact SimplifyTrip support for guidance, or visit <a href="https://support.simplifytrip.com/hop-tac-cung-simplify-trip/#doi-tac" className="underline" target='_blank'>Become a SimplifyTrip partner</a> and submit your institution details so we can help create your institution.
