--- a/pages/en/developers.mdx
+++ b/pages/en/developers.mdx
@@ -1,3 +1,3 @@
-# Tích hợp SimplifyTrip Open API
+# SimplifyTrip Open API Integration
 
-Cấc thông tin cần thiết để có thể tích hợp SimplifyTrip Open API vào hệ thống của bạn
+Essential information to integrate SimplifyTrip Open API into your system.
