--- a/pages/en/developers/api-key.mdx
+++ b/pages/en/developers/api-key.mdx
@@ -1,29 +1,29 @@
-import { Callout, Link, Table, Td, Th, Tr  } from 'nextra/components'
+import { Callout, Table, Td, Tr } from 'nextra/components'
 
-# Quản lý API Key
-SimplifyTrip API sử dụng API Key để xác thực yêu cầu truy cập của bạn. Bạn có thể xem và quản lý API Key của mình trong <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/developers'} className="underline" target='_blank'>Api Keys Settings</a>.
+# API Key Management
+SimplifyTrip API uses API keys to authenticate your requests. You can view and manage your keys in <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/developers'} className="underline" target='_blank'>API Keys Settings</a>.
 
-Api Key chế độ thử nghiệm có tiền tố `pk_test_` và Api Key chế độ live có tiền tố `pk_live_`.
+Test API keys use prefix `pk_test_` and live API keys use prefix `pk_live_`.
 
-Secret Key chế độ thử nghiệm có tiền tố `sk_test_` và Secret Key chế độ live có tiền tố `sk_live_`.
+Test secret keys use prefix `sk_test_` and live secret keys use prefix `sk_live_`.
 
-Tất cả các yêu cầu API phải được thực hiện qua HTTPS . Các cuộc gọi được thực hiện qua HTTP thông thường sẽ không thành công. Các yêu cầu API không xác thực cũng sẽ không thành công.
+All API requests must be made over HTTPS. Calls made over plain HTTP fail. Unauthenticated requests also fail.
 
-API Key và Secret Key sẽ PHẢI được gắn trong header lúc request tới SimplifyTrip APIs
+API Key and Secret Key MUST be attached in request headers when calling SimplifyTrip APIs.
 
 <Callout type="info">
- 	Ở các chế độ khác nhau, `Live Mode` và `Test Mode` bạn có thể tạo nhiều Api Key tách biệt, chúng sẽ không bị ảnh hưởng qua lại giữa các môi trường, đảm bảo dữ liệu ở môi trường thật sẽ được an toàn khi bạn sử dụng Test Api Key để thử nghiệm.
+ 	In `Live Mode` and `Test Mode`, you can create separate API keys. They are isolated by environment so test data cannot affect production data.
 </Callout>
 
-## Tạo Api Key
+## Create API Key
 
-Truy cập <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/developers'}  target='_blank'>Api Keys Settings</a> để tạo Api Key cho tổ chức của bạn
+Go to <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/developers'}  target='_blank'>API Keys Settings</a> to create an API key for your institution.
 
 <div className="my-5">
 	<img src="/screenshots/create-api-key.png" width="100%" />
 </div>
 
-Nhập các thông tin cần thiết để tạo Api Key
+Enter required information for API key creation:
 <div className="grid grid-cols-1 sm:grid-cols-2 gap-5 mt-5 w-full">
 	<div>
 		<Table rules="none" border={0} width="100%" className='border-0'>
@@ -33,7 +33,7 @@ Nhập các thông tin cần thiết để tạo Api Key
 				<Td className='border-0'>
 					<code className='text-red-500 text-xs'>`string`</code>
 
-					Tên của Api Key
+					API key name
 				</Td>
 			</Tr>
 			<Tr className='border-0 !bg-inherit'>
@@ -41,7 +41,7 @@ Nhập các thông tin cần thiết để tạo Api Key
 				<Td className='border-0'>
 					<code className='text-red-500 text-xs'>`string`</code>
 
-					Webhook Endpoint Url để nhận dữ liệu từ SimplifyTrip
+					Webhook endpoint URL to receive data from SimplifyTrip
 				</Td>
 			</Tr>
 			<Tr className='border-0 !bg-inherit'>
@@ -49,7 +49,7 @@ Nhập các thông tin cần thiết để tạo Api Key
 				<Td className='border-0'>
 					<code className='text-red-500 text-xs'>`object`</code>
 
-					Whitelist IP address, Chỉ những địa chỉ IP trong danh sách mới có thể sử dụng Api keys này
+					IP whitelist. Only IPs in this list can use this API key.
 				</Td>
 			</Tr>
 		</tbody>
@@ -63,14 +63,14 @@ Nhập các thông tin cần thiết để tạo Api Key
 </div>
 
 <Callout className="mb-5">
-  **Lưu ý** Sau khi tạo Api Key, Thông tin về Api key này chỉ hiển thị một lần duy nhất, hãy đảm bảo rằng bạn đã lưu lại thông tin trước khi đóng hộp thoại đó.
+  **Note** API key details are shown only once right after creation. Save them before closing the dialog.
 </Callout>
 
-## Quản lý Api Key
+## Manage API Keys
 
-Thông tin của Api Key sẽ bao gồm các thông tin cần thiết để có thể thực hiện request đến SimplifyTrip APIs.
+API key details include the required information to send requests to SimplifyTrip APIs.
 
-API Key và Secret Key của bạn có nhiều đặc quyền, vì vậy hãy đảm bảo giữ chúng an toàn! Không chia sẻ API Key và Secret Key của bạn ở những nơi công khai như GitHub, mã phía máy khách, v.v.
+Your API Key and Secret Key have broad privileges. Keep them secure and never expose them in public places such as GitHub or client-side code.
 
 <div className="grid grid-cols-1 sm:grid-cols-2 gap-5 mt-5 w-full">
 	<div>
@@ -81,7 +81,7 @@ API Key và Secret Key của bạn có nhiều đặc quyền, vì vậy hãy đ
 				<Td className='border-0'>
 					<code className='text-red-500 text-xs'>`string`</code>
 
-					Api Key sẽ được gắn vào `X-Api-Key` trong header khi gửi request
+					API key sent in the `X-Api-Key` header
 				</Td>
 			</Tr>
 			<Tr className='border-0 !bg-inherit'>
@@ -89,7 +89,7 @@ API Key và Secret Key của bạn có nhiều đặc quyền, vì vậy hãy đ
 				<Td className='border-0'>
 					<code className='text-red-500 text-xs'>`string`</code>
 
-					Secret Key sẽ được gắn vào `Authorization: Bearer ...` trong header khi gửi request
+					Secret key sent in `Authorization: Bearer ...` header
 				</Td>
 			</Tr>
 			<Tr className='border-0 !bg-inherit'>
@@ -97,7 +97,7 @@ API Key và Secret Key của bạn có nhiều đặc quyền, vì vậy hãy đ
 				<Td className='border-0'>
 					<code className='text-red-500 text-xs'>`string`</code>
 
-					Key để kiểm tra dữ liệu với signature [chi tết](/developers/signature)
+					Key used for signature verification [details](/developers/signature)
 				</Td>
 			</Tr>
 		</tbody>
@@ -110,8 +110,8 @@ API Key và Secret Key của bạn có nhiều đặc quyền, vì vậy hãy đ
 	</div>
 </div>
 
-Bạn có thể tạo nhiều Api Key cho các mục đích khác nhau, và có thể sửa một vài thông tin của Api Key sau khi tạo.
+You can create multiple API keys for different purposes and update selected settings later.
 
 <Callout className="mb-5" type="error">
-  **Chú ý** Nếu cảm thấy các key của bạn đã bị rò rỉ ra ngoài, hãy vô hiệu hoá chúng, hoặc xoá đi tạo key mới để đảm bảo an toàn cho tổ chức của bạn
+  **Warning** If your keys are exposed, disable or delete them and generate new keys immediately.
 </Callout>
