--- a/pages/en/index.mdx
+++ b/pages/en/index.mdx
@@ -1,34 +1,34 @@
 # SimplifyTrip Open APIs
 
-Chào mừng bạn đến với SimplifyTrip Web Service (APIs) dành cho đối tác. Với sự mở rộng tính năng cũng như tập khách hàng của mình, SimplifyTrip không ngừng cải tiến dịch vụ và việc cung cấp các Web Service cho đối tác tích hợp là một trong những tiện ích mà đội ngũ kỹ sư SimplifyTrip mang đến.
+Welcome to SimplifyTrip partner web services (APIs). As our products and customer base grow, SimplifyTrip continuously improves its services. Providing integration-ready web services for partners is one of the core capabilities delivered by our engineering team.
 
-### Lợi ích khi sử dụng SimplifyTrip Open APIs?
+### Why use SimplifyTrip Open APIs?
 
-Chủ động tích hợp với dữ liệu trên SimplifyTrip vào hệ thống đang vận hành của bạn. Sử dụng mô hình Restful API, việc kết nối đến web service của SimplifyTrip rất dễ dàng và nhanh chóng.
+You can proactively integrate SimplifyTrip data into your existing system. With a RESTful architecture, connecting to SimplifyTrip web services is fast and straightforward.
 
-### Ai có thể truy cập vào SimplifyTrip Open APIs?
+### Who can access SimplifyTrip Open APIs?
 
-Nếu bạn là người bán muốn phát triển phần mềm phù hợp với nhu cầu kinh doanh của mình, hãy tích hợp hệ thống của bạn với SimplifyTrip để khám phá tiềm năng chưa được khai thác trong các lĩnh vực tối ưu hóa hoạt động và quản lý dữ liệu. Chúng tôi cung cấp một loạt API mở toàn diện.
-Bằng cách tận dụng SimplifyTrip Open APIs, bạn sẽ có thể phát triển nhiều ứng dụng khác nhau để đáp ứng nhu cầu về hoạt động mua bán các sản phẩm của SimplifyTrip cung cấp.
+If you are a seller building software tailored to your business needs, integrate your system with SimplifyTrip to unlock opportunities in operations optimization and data management. We provide a comprehensive set of open APIs.
+By leveraging SimplifyTrip Open APIs, you can build different applications to support product trading workflows powered by SimplifyTrip.
 
-### Tổng quan về tích hợp API
+### API integration overview
 
-Sau đây là cái nhìn nhanh về các bước bạn có thể thực hiện để làm quen với tích hợp API trên Nền tảng mở SimplifyTrip trước khi đưa Ứng dụng của bạn vào hoạt động:
+Below is a quick view of the steps to get familiar with integration on the SimplifyTrip Open Platform before going live:
 <div className="flex flex-col lg:flex-row gap-3 items-center justify-center mt-4 w-full">
 	<div className="bg-gray-100 dark:bg-gray-700 p-3 rounded-sm font-semibold text-center">
-		Đăng ký Tài khoản
+		Create an account
 	</div>
 	<span className="rotate-90 lg:rotate-0">⭢</span>
 	<div className="bg-gray-100 dark:bg-gray-700 p-3 rounded-sm font-semibold text-center">
-		Tạo Tổ chức
+		Create institution
 	</div>
 	<span  className="rotate-90 lg:rotate-0">⭢</span>
 	<div className="bg-gray-100 dark:bg-gray-700 p-3 rounded-sm font-semibold text-center">
-		Test APIs Test mode
+		Test APIs in Test mode
 	</div>
 	<span  className="rotate-90 lg:rotate-0">⭢</span>
 	<div className="bg-gray-100 dark:bg-gray-700 p-3 rounded-sm font-semibold text-center">
-		Phê duyệt hồ sơ từ SimplifyTrip
+		Profile approval by SimplifyTrip
 	</div>
 	<span  className="rotate-90 lg:rotate-0">⭢</span>
 	<div className="bg-gray-100 dark:bg-gray-700 p-3 rounded-sm font-semibold text-center">
