--- a/pages/en/institution/offers.mdx
+++ b/pages/en/institution/offers.mdx
@@ -2,10 +2,10 @@
 title: Offers
 ---
 
-# Xem ưu đãi
+# View offers
 
-SimplifyTrip sẽ có những ưu đãi dành riêng cho từng tổ chức khác nhau.
+SimplifyTrip provides institution-specific offers.
 
-Mỗi tổ chức sẽ có các mức giá cho các sản phẩm do SimplifyTrip cung cấp khác nhau, mức chiết khấu cho từng mặt hàng cũng khác nhau. Tuỳ thuộc vào hợp đồng mà hai bên đã thoã thuận trước đó để SimplifyTrip đưa ra những ưu đãi này.
+Each institution can have different product pricing and discount levels depending on the agreement between both parties.
 
-Để xem thông tin ưu đãi của tổ chức của mình, hãy truy cập <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/offers'} className="underline" target='_blank'>Ưu đãi</a>
+To view your institution offers, go to <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/offers'} className="underline" target='_blank'>Offers</a>.
