--- a/pages/en/institution/stats.mdx
+++ b/pages/en/institution/stats.mdx
@@ -1,10 +1,10 @@
 ---
 title: Statistics
 ---
-# Xem thống kê các hoạt động của tổ chức
+# View institution activity statistics
 
-SimplifyTrip sẽ lưu lại tất cả các hoạt động của tổ chức của, thông tin về các đơn hàng, các giao dịch phát sinh, dữ liệu đã gửi tới endpoint webhook của tổ chức.
+SimplifyTrip stores all institution activities, including orders, transaction records, and webhook deliveries to your endpoint.
 
-Tại đó bạn có thể truy xuất và export dữ liệu của tổ chức của mình, để có thể thực hiện các phân tích chuyên sâu sau đó.
+You can retrieve and export your institution data for deeper analysis.
 
-Truy cập tại <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/stats/orders'} className="underline" target='_blank'>Partners Portal</a>
+Access it in the <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/stats/orders'} className="underline" target='_blank'>Partners Portal</a>.
