--- a/pages/en/signature-generator.mdx
+++ b/pages/en/signature-generator.mdx
@@ -1,9 +1,9 @@
 import SignatureGenerator from 'src/components/SignatureGenerator';
 
-# Trình tạo Signature
+# Signature Generator
 
-Chương trình giúp bạn giả lập tạo Signature với `checksumKey` và `data`
+This tool helps you simulate signature generation with `checksumKey` and `data`.
 
-Được mô tả trong [Kiểm tra dữ liệu với signature](/developers/signature)
+See details in [Verify data with signature](/developers/signature).
 
 <SignatureGenerator />
