--- a/pages/en/sing-up.mdx
+++ b/pages/en/sing-up.mdx
@@ -2,11 +2,10 @@
 title: Sign up for a SimplifyTrip account
 ---
 
-# Đăng ký tài khoản
+# Sign up
 
-Truy cập trang đăng ký tài khoản <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/sign-up'} className="underline" target='_blank'>Partners Portal</a> để tiến hành đăng ký
+Go to the <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/sign-up'} className="underline" target='_blank'>Partners Portal</a> sign-up page to create your account.
 
 <div className="my-5">
 	<img src="/screenshots/sign-up.png" width="100%" />
 </div>
-
