--- a/pages/en/institution.mdx
+++ b/pages/en/institution.mdx
@@ -2,13 +2,13 @@
 title: Institution management
 ---
 
-# Quản lý tổ chức
+# Institution management
 
-Đối tượng đăng ký sử dụng của SimplifyTrip Open API là bất kì mô hình kinh doanh nào: Cá nhân, hộ kinh doanh, doanh nghiệp,... SimplifyTrip đều sẽ gọi họ là **Tổ chức**. Trong đó, gồm 2 đối tượng chính:
+Any business model can register to use SimplifyTrip Open API: individuals, household businesses, companies, and more. In this documentation, they are all referred to as an **Institution**. There are two main types:
 
-- Đã có pháp nhân (Được cấp mã số đăng ký doanh nghiệp)
-- Chưa có pháp nhân (Gọi là kinh doanh cá thể)
+- Legal entities (with business registration code)
+- Non-legal entities (individual business operators)
 
-Tất các tổ chức ban đầu sẽ ở chế độ **Test Mode**. [Tìm hiểu về chế độ Test Mode trong SimplifyTrip](/developers/test-mode)
+All institutions start in **Test Mode**. [Learn more about Test Mode in SimplifyTrip](/developers/test-mode)
 
-SimplifyTrip cần xác thực chủ sở hữu của Tổ chức để đảm bảo rằng các Tổ chức đăng kí trên SimplifyTrip là hợp lệ trước khi bạn có thể đưa ứng dụng của mình vào chế độ **Live Mode**
+SimplifyTrip must verify institution ownership to ensure registrations are valid before your application can move to **Live Mode**.
