--- a/pages/en/institution/settings.mdx
+++ b/pages/en/institution/settings.mdx
@@ -2,11 +2,11 @@
 title: Settings
 ---
 
-# Quản lý thông tin của tổ chức
+# Manage institution information
 
-Nơi bạn có thể xem thông tin tổ chức của mình, bạn cũng có thể thay đổi các thông tin cơ bản của tổ chức nếu muốn
+Here you can view your institution details and update basic information when needed.
 
-Truy cập tại <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/settings'} className="underline" target='_blank'>Partners Portal</a>
+Access it in the <a href={process.env.NEXT_PUBLIC_PARTNERS_URL + '/settings'} className="underline" target='_blank'>Partners Portal</a>.
 
 <div className="my-5">
 	<img src="/screenshots/settings.png" width="100%" />
